<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".preview.PreviewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:textSize="32sp"
                android:fontFamily="@font/montserrat_bold"
                tools:text="Title"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_light"
                android:textSize="16sp"
                tools:text="Date"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="8dp"
                tools:ignore="ExtraText">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="4dp"
                        android:src="@drawable/arrow_play"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/ver"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/gray_bar"
                android:clickable="true"
                app:cardCornerRadius="8dp"
                tools:ignore="ExtraText">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="4dp"
                        android:src="@drawable/arrow_play"
                        app:tint="@color/gray_light_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/gray_light_text"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/descargar"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/overview_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/similares"/>

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/compose_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</FrameLayout>